Define Version as utility class